--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,13 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
     "react-slideshow-image": "^4.2.1",
